--- a/package.json
+++ b/package.json
@@ -13,15 +13,24 @@
   "devDependencies": {
     "@aws-cdk/assert": "1.85.0",
     "@types/jest": "^26.0.10",
+    "@types/js-yaml": "^4.0.0",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.85.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.85.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-ec2": "^1.85.0",
+    "@aws-cdk/aws-ecr": "^1.85.0",
+    "@aws-cdk/aws-eks": "^1.85.0",
+    "@aws-cdk/aws-iam": "^1.85.0",
     "@aws-cdk/core": "1.85.0",
+    "cdk8s": "0.30.0",
+    "cdk8s-plus": "0.30.0",
+    "constructs": "3.0.4",
+    "js-yaml": "^3.14.1",
     "source-map-support": "^0.5.16"
   }
 }
